--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "next-cloudinary": "^6.17.5",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
